# identity-resolution-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
identity_resolver/: __init__.py  deterministic.py  graph.py  models.py  normalizer.py  privacy.py  probabilistic.py  resolver.py
tests/: test_graph.py  test_matching.py  test_models.py  test_normalizer.py  test_privacy.py  test_probabilistic.py  test_resolver.py
