[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "identity-resolver"
version = "0.1.0"
description = "Open-source deterministic and probabilistic identity resolution engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Shubham Safaya", email = "safayashubham@gmail.com"},
]
keywords = ["identity-resolution", "entity-resolution", "record-linkage", "data-matching", "cdp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Shubham-Safaya/identity-resolution-engine"
Repository = "https://github.com/Shubham-Safaya/identity-resolution-engine"

[tool.pytest.ini_options]
testpaths = ["tests"]
